--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -19,8 +19,13 @@
 -->
 <resources>
     <!-- Dashboard -->
+    <string name="user_interface_category">واجهة التشغيل</string>
+    <string name="system_category">النظام</string>
+    <string name="other_category">أخرى</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">شريط الحالة</string>
+    <string name="status_bar_summary">تحرير مظهر شريط الحالة</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,12 +36,24 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_dismissable">لا توجد إشعارات قابلة للإزالة</string>
+    <string name="smart_pulldown_ongoing">لا توجد إشعارات حالية</string>
+    <string name="smart_pulldown_summary">إفتح الإعدادات السريعة عندما يكون هنالك %1$s</string>
+    <string name="smart_pulldown_none_summary">فتح الاعدادات السريعة عندما لا يكون هناك اشعارات</string>
+    <string name="smart_pulldown_off_summary">مطفي</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">تم تمكين تنسيق 24 ساعة</string>
+    <string name="clock_date_string_edittext_title">يجب ان يكون في صيغة التاريخ ، على سبيل المثال شهر / يوم / سنة</string>
+    <string name="clock_date_string_edittext_summary">أدخل السلسلة</string>
+    <string name="menu_cancel">إلغاء</string>
+    <string name="menu_save">حفظ</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">الاشعارات</string>
+    <string name="notifications_summary">التحكم في الإشعارات الموسعة</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +61,8 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">الإعدادات السريعة</string>
+    <string name="quick_settings_summary">تحرير مظهر الإعدادات السريعة</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +73,17 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="custom_header_browse_title">تصفح الترويسات المثبتة</string>
+    <string name="custom_header_browse_summary_new">تصفح كل مجموعات الرؤوس المتاحة</string>
+    <string name="custom_header_pick_title">أختر صورة الترويسة</string>
+    <string name="custom_header_pick_summary">إختر صورة لاستخدامها في الوضع الثابت</string>
+    <string name="header_provider_disabled">معطل</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">التطبيقات الأخيرة</string>
+    <string name="recents_summary">تحرير مظهر شاشة تطبيقات الاخيرة</string>
+    <string name="stock_recents_category">التطبيقات الاخيرة القياسية</string>
+    <string name="alternative_recents_category">التطبيقات الاخيرة البديلة</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -65,6 +93,8 @@
     <!-- Slim recents membar -->
     <!-- OmniSwitch -->
     <!-- Lockscreen -->
+    <string name="lockscreen_title">شاشة القفل</string>
+    <string name="lockscreen_summary">تحرير مظهر شاشة القفل</string>
     <!-- Double tap to sleep on lockscreen -->
     <!-- Media art -->
     <!-- Lockscreen battery info indicator  -->
@@ -78,6 +108,8 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">تعديلات واجهة المستخدم الأخرى</string>
+    <string name="other_ui_summary">متفرقات مختلفة</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,28 +125,130 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">المؤثرات الحركية</string>
+    <string name="system_animations_summary">الرسوم المتحركة للنظام</string>
+    <string name="custom_bootanimation_title">الرسوم المتحركة لبداية التشغيل</string>
+    <string name="custom_bootanimation_summary">حدد الرسم المتحرك للتشغيل المخصص. في كل تغيير، سوف يتم عمل نسخة لرسم التشغيل الحالي إلى المجلد BaikalOS_backup في وحدة التخزين الداخلية. الرسومات القديمة يجب حذفها يدوياً اذا لم تعد بحاجة اليها.</string>
+    <string name="bootanimation_preview">معاينة الرسوم المتحركة للتشغيل</string>
+    <string name="bootanimation_set_custom">تعيين مخصص...</string>
+    <string name="bootanimation_creating_preview">إنشاء معاينة...</string>
+    <string name="bootanimation_error_reading_zip_file">خطأ في قراءة ملف Zip</string>
+    <string name="bootanimation_error_creating_preview">خطأ في إنشاء معاينة</string>
+    <string name="bootanimation_install_file_manager_error">لم يتم العثور على تطبيقات لتحديد ملف الـ zip. الرجاء تثبيت مدير ملفات.</string>
+    <string name="bootanimation_apply">تنفيذ</string>
+    <string name="bootanimation_install_successful">تم تطبيق رسم التشغيل المتحرك الجديد بنجاح.</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">سلوك النظام</string>
+    <string name="system_behaviour_summary">ميزات النظام</string>
+    <string name="selinux_explanation_summary">إن Selinux عبارة عن تعديلات في النواة وأدوات مساحة المستخدم. تغيير الأنماط يمكن أن يسبب تأثيرات غير مرغوبة. إستخدمها على مسؤوليتك.</string>
+    <string name="selinux_mode_title">وضع SElinux</string>
+    <string name="selinux_permissive_summary">متساهل</string>
+    <string name="selinux_enforcing_summary">فرض</string>
+    <string name="selinux_persistence_title">تستمر عبر إعادة التشغيل</string>
+    <string name="selinux_persistence_summary">استعادة ما سبق وضع مجموعة sepolicy عند كل تشغيل</string>
+    <string name="selinux_permissive_toast_title">تعيين Selinux إلى متساهل!</string>
+    <string name="selinux_enforcing_toast_title">تعيين Selinux لفرض!</string>
     <!-- Log it -->
+    <string name="log_it_title">سجل هذا القرف!</string>
+    <string name="log_it_now_title">استخدام</string>
+    <string name="log_it_dialog_title">استخدام</string>
+    <string name="logcat_warning">مشاركة او الخروج!</string>
+    <string name="share_title">مشاركة...</string>
+    <string name="log_it_share_subject">سجلات BaikalOS</string>
+    <string name="log_it_now_summary">كن صبورا للسجلات المراد إنشاؤها</string>
+    <string name="log_it_logs_in_progress">يتم الآن إنشاء سجلات…</string>
+    <string name="log_it_share_type_title">طريقة المشاركة</string>
+    <string name="log_it_share_type_zip">ملف ZIP</string>
+    <string name="log_it_share_type_haste">تحميل الى عجلة BaikalOS</string>
+    <string name="log_it_share_via">مشاركة عبر</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">لوحة الشفافية</string>
+    <string name="panel_porn_summary">قبل العالم!</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">تخصيصات AE</string>
+    <string name="ae_settings_summary">تخصيص مظهر وسلوك من إضافات BaikalOS</string>
+    <string name="theme_title">السمة</string>
+    <string name="theme_default">سمة الإعدادات الافتراضية</string>
+    <string name="theme_default_more_accent">المزيد من الألوان</string>
+    <string name="theme_light">فاتح</string>
+    <string name="theme_light_more_accent">فاتح مع المزيد من الألوان</string>
+    <string name="theme_dark">مظلم</string>
+    <string name="theme_dark_more_accent">الظلام مع المزيد من الألوان</string>
+    <string name="ae_launcher_enabled_title">إظهار رمز المشغل</string>
+    <string name="ae_launcher_enabled_summary">إظهار إضافات BaikalOS في المشغل</string>
+    <string name="ae_launcher_enabled_update">تحديث رؤية رمز المشغل. قد يستغرق الأمر بعض الوقت لتكون نافذة المفعول</string>
     <!-- About -->
+    <string name="about_title">حول</string>
+    <string name="about_summary">عرض معلومات حول هذا الروم</string>
+    <string name="weblinks_category">الروابط</string>
+    <string name="info_category">معلومات</string>
+    <string name="baikalos_website_title">الموقع الإلكتروني</string>
+    <string name="baikalos_website_summary">قم بزيارة موقع BaikalOS</string>
+    <string name="g_plus_title">مجتمع G+</string>
+    <string name="g_plus_summary">انضم إلى مجتمعنا +Google</string>
+    <string name="baikalos_gerrit_title">جيريت</string>
+    <string name="baikalos_gerrit_summary">قم بزيارة موقعنا لتعرف ما نحن نعمل عليه</string>
+    <string name="baikalos_changelog_title">سجل التغييرات</string>
+    <string name="baikalos_changelog_summary">عرض التغييرات التي أدخلت مؤخرا BaikalOS</string>
+    <string name="baikalos_downloads_title">التنزيلات</string>
+    <string name="baikalos_downloads_summary">قم بزيارة صفحة تنزيل BaikalOS للجهاز الخاص بك</string>
+    <string name="baikalos_ota_title">مركز التحديث</string>
+    <string name="baikalos_ota_summary">التحقق من وجود تحديثات BaikalOS</string>
+    <string name="stats_title">الإحصائيات</string>
+    <string name="stats_summary">اختر داخل/خارج لإحصائيات مجهولة المصدر</string>
+    <string name="device_maintainer_title">مشرف الجهاز</string>
+    <string name="device_maintainer_dialog">مشرف الجهاز</string>
+    <string name="device_maintainers_dialog">مشرفي الجهاز</string>
+    <string name="device_maintainer_default">غير معروف</string>
+    <string name="no_root_title">غير مرّوت</string>
     <!-- Other / general purpose -->
+    <string name="on">تشغيل</string>
+    <string name="off">إيقاف</string>
+    <string name="reset">إعادة تعيين</string>
+    <string name="systemui_restart_title">مطلوب إعادة تشغيل واجهة النظام</string>
+    <string name="systemui_restart_message">لتكون كافة التغييرات نافذة المفعول، مطلوب إعادة تشغيل واجهة النظام. هل تريد إعادة تشغيل واجهة النظام الآن؟</string>
+    <string name="cannot_get_su">فشل الإجراء بسبب فقدان الوصول لصلاحيات المستخدم الخارق</string>
+    <string name="launcher_shortcut_disabled_message">الاختصار معطل</string>
+    <string name="hidden_anim_activity_title">وقت اليوغا!!!</string>
+    <string name="hidden_anim_more_nice">لطيف</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
+    <string name="weather_title">الطقس</string>
+    <string name="weather_config_title">إعدادات الخدمة</string>
     <!-- Lockscreen Weather -->
     <!-- Statusbar ticker -->
     <!-- Navigation-->
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">حزم الرموز</string>
+    <string name="picker_activities">الأنشطة</string>
+    <string name="select_custom_app_title">حدد تطبيق مخصص</string>
+    <string name="select_custom_activity_title">حدد نشاط مخصص</string>
+    <string name="profile_applist_title">تطبيقات</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">اختر الإجراء</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
+    <string name="smartbar_factory_reset_title">إعادة الضبط للأصلي</string>
+    <string name="smartbar_factory_reset_confirm">متأكد من انك تريد إعادة ضبط إعدادات الشريط الذكي للإفتراضي؟</string>
+    <string name="smartbar_backup_current_config_title">حفظ الملف الشخصي</string>
+    <string name="smartbar_restore_config_title">استعادة الملف الشخصي</string>
+    <string name="smartbar_config_name_edit_dialog_title">أسم الملف للشريط الذكي</string>
+    <string name="smartbar_config_name_edit_dialog_message">إختر إسماً أو إتركه فارغاً</string>
+    <string name="smartbar_config_dialog_title">ملفات الشريط الذكي</string>
+    <string name="smartbar_config_backup_success_toast">تم حفظ ملف الشريط الذكي بنجاح</string>
+    <string name="smartbar_config_restore_success_toast">تم إستعادة ملف الشريط الذكي بنجاح</string>
+    <string name="smartbar_config_backup_error_toast">خطأ بحفظ ملف الشريط الذكي</string>
+    <string name="smartbar_config_restore_error_toast">خطأ بإستعادة ملف الشريط الذكي</string>
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">علامة مشغل شبكة مخصصة</string>
+    <string name="custom_carrier_label_explain">الرجاء إدخال علامة جديدة، إتركها فارغة للرجوع للعلامة الأصلية.</string>
+    <string name="custom_carrier_label_notset">لم يتم ضبط علامة مخصصة حالياً</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -125,6 +259,7 @@
     <!-- Dynamic Navbar -->
     <!-- Face unlock toggle -->
     <!-- Navigation -->
+    <string name="navigation_category">التنقل</string>
     <!-- HW keys -->
     <!-- Volume keys -->
     <!-- Hardware button navigation -->
@@ -132,6 +267,9 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_summary_left">سحب الحافة اليسرى من شريط الحالة الى الأسفل ينقل الإعدادات السريعة</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">سحب الحافة اليمنى من شريط الحالة الى الأسفل ينقل الإعدادات السريعة</string>
+    <string name="status_bar_quick_qs_pulldown_off">إيقاف</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
