--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -19,8 +19,13 @@
 -->
 <resources>
     <!-- Dashboard -->
+    <string name="user_interface_category">Interfaz de usuario</string>
+    <string name="system_category">Sistema</string>
+    <string name="other_category">Otros</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">Barra de estado</string>
+    <string name="status_bar_summary">Editar aspecto de barra de estado</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,12 +36,24 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_dismissable">sin notificaciones descartables</string>
+    <string name="smart_pulldown_ongoing">sin nuevas notificaciones</string>
+    <string name="smart_pulldown_summary">Abrir ajustes rápidos cuando hay %1$s</string>
+    <string name="smart_pulldown_none_summary">Abrir ajustes rápidos cuando no hay notificaciones</string>
+    <string name="smart_pulldown_off_summary">está deshabilitado</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">reloj 24 horas habilitado</string>
+    <string name="clock_date_string_edittext_title">Debe estar en formato DateFormat. Ej: MM/dd/yy</string>
+    <string name="clock_date_string_edittext_summary">Introducir cadena</string>
+    <string name="menu_cancel">Cancelar</string>
+    <string name="menu_save">Guardar</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">Notificaciones</string>
+    <string name="notifications_summary">Control de notificaciones</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +61,8 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">Ajustes rápidos</string>
+    <string name="quick_settings_summary">Editar aspecto de ajustes rápidos</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +73,17 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="custom_header_browse_title">Explorar imágenes instaladas</string>
+    <string name="custom_header_browse_summary_new">Ver todos las colecciones de imágenes de cabecera disponibles</string>
+    <string name="custom_header_pick_title">Seleccione la imagen de cabecera</string>
+    <string name="custom_header_pick_summary">Seleccione una imagen para usar en modo estático</string>
+    <string name="header_provider_disabled">Deshabilitada</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">Aps. recientes</string>
+    <string name="recents_summary">Editar aspecto del panel de aps. recientes</string>
+    <string name="stock_recents_category">Panel recientes predeterminado</string>
+    <string name="alternative_recents_category">Panel recientes alternativo</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -65,6 +93,8 @@
     <!-- Slim recents membar -->
     <!-- OmniSwitch -->
     <!-- Lockscreen -->
+    <string name="lockscreen_title">Pantalla de bloqueo</string>
+    <string name="lockscreen_summary">Editar aspecto de pantalla de bloqueo</string>
     <!-- Double tap to sleep on lockscreen -->
     <!-- Media art -->
     <!-- Lockscreen battery info indicator  -->
@@ -78,6 +108,8 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">Otros ajustes de interfaz de usuario</string>
+    <string name="other_ui_summary">Varios</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,28 +125,131 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">Pantalla y animaciones</string>
+    <string name="system_animations_summary">Animaciones de sistema</string>
+    <string name="custom_bootanimation_summary">Seleccione su nueva animación de arranque. \nOn cada cambio, animación actual hacer copias a la carpeta de almacenamiento de información/AOKP_ota con fecha actual. Los antiguos deben eliminar manualmente si no se necesita.</string>
+    <string name="bootanimation_preview">Previsualización de la animación</string>
+    <string name="bootanimation_set_custom">Establecer personalizada...</string>
+    <string name="bootanimation_creating_preview">Creando precisualización...</string>
+    <string name="bootanimation_error_reading_zip_file">Error al leer el fichero zip</string>
+    <string name="bootanimation_error_creating_preview">Error al crear la previsualización</string>
+    <string name="bootanimation_install_file_manager_error">No se encontró ninguna aplicación para elegir el fichero zip. Instalar un explorador de ficheros.</string>
+    <string name="bootanimation_apply">Aplicar</string>
+    <string name="bootanimation_install_successful">Nueva animación de inicio aplicada satisfactoriamente.</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">Comportamiento del sistema</string>
+    <string name="system_behaviour_summary">Ajustes de sistema</string>
+    <string name="selinux_explanation_summary">SELinux es un conjunto de modificaciones del kernel y utilidades a nivel de usuario. Cambiando el modo puede ocasionar efectos no deseados. Usar bajo su responsabilidad.</string>
+    <string name="selinux_mode_title">Modo SELinux</string>
+    <string name="selinux_permissive_summary">Permisivo</string>
+    <string name="selinux_enforcing_summary">Obligatorio</string>
+    <string name="selinux_persistence_title">Mantener tras reiniciar</string>
+    <string name="selinux_persistence_summary">Restaura el estado de SELinux anterior al reiniciar</string>
+    <string name="selinux_permissive_toast_title">¡SELinux establevido a permisivo!</string>
+    <string name="selinux_enforcing_toast_title">¡Establecido modo Selinux obligatorio!</string>
     <!-- Log it -->
+    <string name="log_it_title">Log &amp; debug!</string>
+    <string name="logcat_radio_title">Registro de radio</string>
+    <string name="log_it_now_title">Compartir</string>
+    <string name="log_it_dialog_title">Compartir</string>
+    <string name="logcat_warning">Compartir o desechar!</string>
+    <string name="share_title">Compartir...</string>
+    <string name="log_it_share_subject">logs BaikalOS</string>
+    <string name="log_it_now_summary">Se paciente hasta que los logs se creen</string>
+    <string name="log_it_logs_in_progress">Creando logs…</string>
+    <string name="log_it_share_type_title">Forma de envío</string>
+    <string name="log_it_share_type_zip">Archivo ZIP</string>
+    <string name="log_it_share_type_haste">Subir a BaikalOS ya</string>
+    <string name="log_it_share_via">Compartir a través de</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">Estilo de paneles</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">Personalización</string>
+    <string name="ae_settings_summary">Personalizar el aspecto y comportamiento de los Extras BaikalOS</string>
+    <string name="theme_title">Tema</string>
+    <string name="theme_default">Configuración predeterminada</string>
+    <string name="theme_default_more_accent">Más color</string>
+    <string name="theme_light">Claro</string>
+    <string name="theme_light_more_accent">Claro con más color</string>
+    <string name="theme_dark">Oscuro</string>
+    <string name="theme_dark_more_accent">Oscuro con más color</string>
+    <string name="ae_launcher_enabled_title">Mostrar icono del launcher</string>
+    <string name="ae_launcher_enabled_summary">Mostrar Extras BaikalOS en launcher</string>
+    <string name="ae_launcher_enabled_update">Visibilidad del icono de Launcher actualizada. Podría tomar algún tiempo para que el cambio surta efecto</string>
     <!-- About -->
+    <string name="about_title">Acerca de</string>
+    <string name="about_summary">Información de la ROM</string>
+    <string name="weblinks_category">Enlaces</string>
+    <string name="info_category">Información</string>
+    <string name="baikalos_website_title">Sitio web</string>
+    <string name="baikalos_website_summary">Visite la página web de BaikalOS</string>
+    <string name="g_plus_title">Conunidad G+</string>
+    <string name="g_plus_summary">Visitar nuestra comunidad en Google+</string>
+    <string name="baikalos_gerrit_summary">Visitar nuestro Gerrit para saber en qué estamos trabajando</string>
+    <string name="baikalos_changelog_title">Lista de cambios</string>
+    <string name="baikalos_changelog_summary">Ver la lista de cambios recientes de BaikalOS</string>
+    <string name="baikalos_downloads_title">Descargas</string>
+    <string name="baikalos_downloads_summary">Visitar la página de descargas de BaikalOS para tu dispositivo</string>
+    <string name="baikalos_ota_title">Actualizaciones del sistema</string>
+    <string name="baikalos_ota_summary">Comprobar actualizaciones</string>
+    <string name="stats_title">Estadísticas</string>
+    <string name="stats_summary">Activar/Desactivar envío de estadísticas anónimas</string>
+    <string name="device_maintainer_title">Responsable del dispositivo</string>
+    <string name="device_maintainer_dialog">Responsable del dispositivo</string>
+    <string name="device_maintainers_dialog">Encargados de dispositivos</string>
+    <string name="device_maintainer_default">Desconocido</string>
+    <string name="no_root_title">No rooteado</string>
+    <string name="no_root_summary">Para obtener más funcionalidades, rootear el dispositivo</string>
     <!-- Other / general purpose -->
+    <string name="on">Activado</string>
+    <string name="off">Desactivado</string>
+    <string name="reset">Restablecer</string>
+    <string name="systemui_restart_title">SystemUI reinicio requerido</string>
+    <string name="systemui_restart_message">Para que todos los cambios surtan efecto, SystemUI es necesario. ¿Reiniciar el SystemUI ahora?</string>
+    <string name="cannot_get_su">Error en la acción debido a la falta de acceso de superusuario</string>
+    <string name="launcher_shortcut_disabled_message">Acceso directo deshabilitado</string>
+    <string name="hidden_anim_activity_title">Hora de Yoga!!!</string>
+    <string name="hidden_anim_more_nice">AGRADABLE</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
+    <string name="weather_title">Clima</string>
+    <string name="weather_config_title">Ajustes del servicio</string>
     <!-- Lockscreen Weather -->
     <!-- Statusbar ticker -->
     <!-- Navigation-->
+    <string name="navigation_title">Navegación</string>
+    <string name="navigation_summary">Predeterminado/Smartbar/Fling/Gestos</string>
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">Paquete de iconos</string>
+    <string name="picker_activities">Acciones</string>
+    <string name="select_custom_app_title">Elegir ap. personalizada</string>
+    <string name="select_custom_activity_title">Elegir acción personalizada</string>
+    <string name="profile_applist_title">Aplicaciones</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">Elegir acción</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
+    <string name="smartbar_factory_reset_title">Restablecer predeterminado</string>
+    <string name="smartbar_factory_reset_confirm">¿Seguro que desea restablecer Smartbar a los valores predeterminados?</string>
+    <string name="smartbar_backup_current_config_title">Guardar perfil</string>
+    <string name="smartbar_restore_config_title">Restaurar perfil</string>
+    <string name="smartbar_config_name_edit_dialog_title">Nombre del perfil de Smartbar</string>
+    <string name="smartbar_config_name_edit_dialog_message">Escribir un nombre o dejar en blanco</string>
+    <string name="smartbar_config_dialog_title">Perfiles de Smartbar</string>
+    <string name="smartbar_config_backup_success_toast">Perfil Smartbar guardado correctamente</string>
+    <string name="smartbar_config_restore_success_toast">Perfil Smartbar restaurado correctamente</string>
+    <string name="smartbar_config_backup_error_toast">Error al guardar el perfil de Smartbar</string>
+    <string name="smartbar_config_restore_error_toast">Error restaurando el perfil de Smartbar</string>
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">Nombre de operador personalizado</string>
+    <string name="custom_carrier_label_explain">Introduzca un nuevo nombre. Dejar en blanco para restablecer al predeterminado.</string>
+    <string name="custom_carrier_label_notset">Nombre personalizado no establecido actualmente</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -125,6 +260,7 @@
     <!-- Dynamic Navbar -->
     <!-- Face unlock toggle -->
     <!-- Navigation -->
+    <string name="navigation_category">Navegación</string>
     <!-- HW keys -->
     <!-- Volume keys -->
     <!-- Hardware button navigation -->
@@ -132,6 +268,9 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_summary_left">El borde izquierdo de la barra de notificaciones despliega los ajustes rápidos</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">El borde derecho de la barra de notificaciones despliega los ajustes rápidos</string>
+    <string name="status_bar_quick_qs_pulldown_off">Desactivado</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
@@ -145,6 +284,7 @@
     <!-- Hostname setting -->
     <!-- Gestures -->
     <!-- Carbon gestures -->
+    <string name="carbon_gesture_launch">Lanzar</string>
     <!-- Disable FC notifications -->
     <!-- Circle app bar -->
     <!--OmniGesture-->
