--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -19,8 +19,13 @@
 -->
 <resources>
     <!-- Dashboard -->
+    <string name="user_interface_category">インターフェース</string>
+    <string name="system_category">システム</string>
+    <string name="other_category">その他</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">ステータスバー</string>
+    <string name="status_bar_summary">ステータスバーの外観を編集します</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,12 +36,24 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_dismissable">削除できる通知がない</string>
+    <string name="smart_pulldown_ongoing">実行中の通知がない</string>
+    <string name="smart_pulldown_summary">%1$s時に直接クイック設定を開きます</string>
+    <string name="smart_pulldown_none_summary">通知がない時に直接クイック設定を開きます</string>
+    <string name="smart_pulldown_off_summary">OFF</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">24時間表記が有効になっています</string>
+    <string name="clock_date_string_edittext_title">MM/dd/yy のように Java の DateFormat に従ってください</string>
+    <string name="clock_date_string_edittext_summary">文字列を入力</string>
+    <string name="menu_cancel">キャンセル</string>
+    <string name="menu_save">保存</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">通知</string>
+    <string name="notifications_summary">通知の拡張設定</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +61,8 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">クイック設定パネル</string>
+    <string name="quick_settings_summary">クイック設定パネルの外観を編集します</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +73,17 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="custom_header_browse_title">インストール済みのヘッダーを表示する</string>
+    <string name="custom_header_browse_summary_new">利用可能なすべてのヘッダーコレクションを表示します</string>
+    <string name="custom_header_pick_title">ヘッダー画像の選択</string>
+    <string name="custom_header_pick_summary">固定モードで使用する画像を選択します</string>
+    <string name="header_provider_disabled">無効</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">アプリ履歴</string>
+    <string name="recents_summary">アプリ履歴画面の外観を編集します</string>
+    <string name="stock_recents_category">標準のアプリ履歴</string>
+    <string name="alternative_recents_category">代替のアプリ履歴</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -65,6 +93,8 @@
     <!-- Slim recents membar -->
     <!-- OmniSwitch -->
     <!-- Lockscreen -->
+    <string name="lockscreen_title">ロック画面</string>
+    <string name="lockscreen_summary">ロック画面の外観を編集します</string>
     <!-- Double tap to sleep on lockscreen -->
     <!-- Media art -->
     <!-- Lockscreen battery info indicator  -->
@@ -78,6 +108,8 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">その他の UI 設定</string>
+    <string name="other_ui_summary">その他諸々</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,28 +125,133 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">アニメーション</string>
+    <string name="system_animations_summary">システムのアニメーション設定</string>
+    <string name="custom_bootanimation_title">ブートアニメーション</string>
+    <string name="custom_bootanimation_summary">カスタムブートアニメーションを選択してください。変更する度に現在のアニメーションが日付と共に内部ストレージの BaikalOS_backup フォルダにバックアップされます。必要なければ削除してください。</string>
+    <string name="bootanimation_preview">ブートアニメーションのプレビュー</string>
+    <string name="bootanimation_set_custom">カスタムを設定...</string>
+    <string name="bootanimation_creating_preview">プレビューの生成中...</string>
+    <string name="bootanimation_error_reading_zip_file">ZIP の読み込み中にエラーが発生しました</string>
+    <string name="bootanimation_error_creating_preview">プレビューの生成中にエラーが発生しました</string>
+    <string name="bootanimation_install_file_manager_error">ZIP ファイルを選ぶためのアプリが見つかりません。ファイルマネージャをインストールしてください</string>
+    <string name="bootanimation_apply">適用</string>
+    <string name="bootanimation_install_successful">新しいブートアニメーションを適用しました</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">システムの動作</string>
+    <string name="system_behaviour_summary">システムの挙動に関する設定</string>
+    <string name="selinux_explanation_summary">SELinuxはカーネルの改変とユーザー空間ツールの組み合わせから成ります。モードの変更は望まない影響を及ぼすことがあります。自己責任の下で利用してください。</string>
+    <string name="selinux_mode_title">SELinux モード</string>
+    <string name="selinux_persistence_title">再起動後も維持する</string>
+    <string name="selinux_persistence_summary">起動する度に上記で設定したモードに再設定します</string>
+    <string name="selinux_permissive_toast_title">SELinuxは permissive に設定されました！</string>
+    <string name="selinux_enforcing_toast_title">SELinux を Enforcing にしました！</string>
     <!-- Log it -->
+    <string name="log_it_title">ログを取得!</string>
+    <string name="log_it_summary">Logcat、kmesg、dmesg</string>
+    <string name="logcat_radio_title">ラジオのログ</string>
+    <string name="log_it_now_title">ログの取得</string>
+    <string name="log_it_dialog_title">ログの取得</string>
+    <string name="logcat_warning">共有しよう！</string>
+    <string name="share_title">共有する...</string>
+    <string name="log_it_share_subject">BaikalOS ログ</string>
+    <string name="log_it_now_summary">ログが作成されるまでお待ちください</string>
+    <string name="log_it_logs_in_progress">ログを作成しました…</string>
+    <string name="log_it_share_type_title">共有方法</string>
+    <string name="log_it_share_type_zip">ZIP ファイル</string>
+    <string name="log_it_share_type_haste">BaikalOS Haste にアップロード</string>
+    <string name="log_it_share_via">共有...</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">パネル</string>
+    <string name="panel_porn_summary">パネルの不透明度を編集します。Davor 氏に感謝！</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">BaikalOS Extras の設定</string>
+    <string name="ae_settings_summary">BaikalOS Extras の見た目や動作をカスタマイズします</string>
+    <string name="theme_title">テーマ</string>
+    <string name="theme_default">デフォルトのテーマ</string>
+    <string name="theme_default_more_accent">他の色</string>
+    <string name="theme_light">ライト</string>
+    <string name="theme_light_more_accent">ライトとアクセント</string>
+    <string name="theme_dark">ダーク</string>
+    <string name="theme_dark_more_accent">ダークとアクセント</string>
+    <string name="ae_launcher_enabled_title">ランチャーアイコンの表示</string>
+    <string name="ae_launcher_enabled_summary">BaikalOS Extrasのアイコンをランチャーに表示する</string>
+    <string name="ae_launcher_enabled_update">ランチャーアイコンの表示設定を更新しました。変更の反映には少し時間がかかることがあります</string>
     <!-- About -->
+    <string name="about_title">BaikalOS Extrasについて</string>
+    <string name="about_summary">この ROM についての情報を表示します</string>
+    <string name="weblinks_category">ウェブリンク</string>
+    <string name="info_category">情報</string>
+    <string name="baikalos_website_title">ウェブサイト</string>
+    <string name="baikalos_website_summary">BaikalOS のウェブサイトにアクセスします</string>
+    <string name="g_plus_title">Google+ コミュニティ</string>
+    <string name="g_plus_summary">Google+ コミュニティにアクセスします</string>
+    <string name="baikalos_gerrit_title">Gerrit Code Review</string>
+    <string name="baikalos_gerrit_summary">Gerrit で BaikalOS の開発の最前線をチェックします</string>
+    <string name="baikalos_changelog_title">更新履歴</string>
+    <string name="baikalos_changelog_summary">BaikalOS の最近の更新履歴を確認します</string>
+    <string name="baikalos_downloads_title">ダウンロード</string>
+    <string name="baikalos_downloads_summary">最新のビルドをダウンロードします</string>
+    <string name="baikalos_ota_title">アップデートセンター</string>
+    <string name="baikalos_ota_summary">BaikalOS の更新を確認します</string>
+    <string name="stats_title">利用統計</string>
+    <string name="stats_summary">匿名の統計をオプトイン/アウトします</string>
+    <string name="device_maintainer_title">メンテナ</string>
+    <string name="device_maintainer_dialog">メンテナ</string>
+    <string name="device_maintainers_dialog">メンテナ</string>
+    <string name="device_maintainer_default">不明</string>
+    <string name="no_root_title">root 化されていません</string>
+    <string name="no_root_summary">root 化するとより多くの機能を使えます</string>
     <!-- Other / general purpose -->
+    <string name="on">ON</string>
+    <string name="off">OFF</string>
+    <string name="reset">リセット</string>
+    <string name="systemui_restart_title">システム UI の再起動が必要</string>
+    <string name="systemui_restart_message">すべての変更を反映するには、システム UI の再起動が必要です。再起動しますか？</string>
+    <string name="cannot_get_su">Superuser アクセスが不足しているためアクションに失敗しました</string>
+    <string name="launcher_shortcut_disabled_message">ショートカットは無効です</string>
+    <string name="hidden_anim_activity_title">Yoga time!!!</string>
+    <string name="hidden_anim_more_nice">いいぞ</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
+    <string name="weather_title">天気</string>
+    <string name="weather_config_title">サービスの設定</string>
     <!-- Lockscreen Weather -->
     <!-- Statusbar ticker -->
     <!-- Navigation-->
+    <string name="navigation_title">ナビゲーション</string>
+    <string name="navigation_summary">標準/Smartbar/Fling/ジェスチャー</string>
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">アイコンパック</string>
+    <string name="picker_activities">アクティビティ</string>
+    <string name="select_custom_app_title">アプリを選択</string>
+    <string name="select_custom_activity_title">アクティビティを選択</string>
+    <string name="profile_applist_title">アプリ</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">アクションを選択</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
+    <string name="smartbar_factory_reset_title">初期設定に戻す</string>
+    <string name="smartbar_factory_reset_confirm">本当に Smartbar を初期設定に戻しても良いですか？</string>
+    <string name="smartbar_backup_current_config_title">プロファイルを保存</string>
+    <string name="smartbar_restore_config_title">プロファイルを復元</string>
+    <string name="smartbar_config_name_edit_dialog_title">Smartbar のプロファイル名</string>
+    <string name="smartbar_config_name_edit_dialog_message">名前を入力しても空のままでも構いません</string>
+    <string name="smartbar_config_dialog_title">Smartbar のプロファイル</string>
+    <string name="smartbar_config_backup_success_toast">Smartbar プロファイルを保存しました</string>
+    <string name="smartbar_config_restore_success_toast">Smartbar プロファイルを復元しました</string>
+    <string name="smartbar_config_backup_error_toast">Smartbar プロファイルの保存でエラーが発生しました</string>
+    <string name="smartbar_config_restore_error_toast">Smartbar プロファイルの復元でエラーが発生しました</string>
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">カスタムキャリアラベル</string>
+    <string name="custom_carrier_label_explain">新しいラベル名を入力してください。空白のままにすると標準のラベルに戻ります。</string>
+    <string name="custom_carrier_label_notset">カスタムラベルは設定されていません</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -125,6 +262,7 @@
     <!-- Dynamic Navbar -->
     <!-- Face unlock toggle -->
     <!-- Navigation -->
+    <string name="navigation_category">ナビゲーション</string>
     <!-- HW keys -->
     <!-- Volume keys -->
     <!-- Hardware button navigation -->
@@ -132,6 +270,9 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_summary_left">ステータスバーの左端をプルダウンしてクイック設定を開く</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">ステータスバーの右端をプルダウンしてクイック設定を開く</string>
+    <string name="status_bar_quick_qs_pulldown_off">OFF</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
@@ -145,6 +286,7 @@
     <!-- Hostname setting -->
     <!-- Gestures -->
     <!-- Carbon gestures -->
+    <string name="carbon_gesture_launch">起動</string>
     <!-- Disable FC notifications -->
     <!-- Circle app bar -->
     <!--OmniGesture-->
