--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -18,9 +18,12 @@
  */
 -->
 <resources>
+    <string name="app_name">Dodatki </string>
     <!-- Dashboard -->
+    <string name="other_category">Inne</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">Pasek statusu</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,8 +34,14 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_off_summary">jest wyłączone</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">24 godzinny zegar jest włączony</string>
+    <string name="clock_date_string_edittext_title">Musi być w formacie daty np. dd/MM/rr</string>
+    <string name="clock_date_string_edittext_summary">Wprowadź ciąg znaków</string>
+    <string name="menu_cancel">Anuluj</string>
+    <string name="menu_save">Zapisz</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
@@ -44,6 +53,7 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">Szybkie ustawienia</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,6 +64,7 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="header_provider_disabled">Wyłączono</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
     <!-- Recents panel settings -->
@@ -78,6 +89,7 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">Inne dodatki UI</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,14 +105,58 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">Animacje</string>
+    <string name="custom_bootanimation_title">Animacja uruchamiania</string>
+    <string name="custom_bootanimation_summary">Wybierz niestandardową animacje uruchamiania. Po każdej zmianie zostaje wykonana kopia obecnej animacji do _backup w pamięci urządzenia. Starsze kopie muszą zostać usunięte manualnie.</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">Zachowanie systemu</string>
+    <string name="selinux_mode_title">Tryb SELinux</string>
+    <string name="selinux_enforcing_toast_title">Tryb Selinux ustawiony na enforcing!</string>
     <!-- Log it -->
+    <string name="log_it_title">Loguj ten shit!</string>
+    <string name="log_it_share_via">Udostępnij przez</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">Panel porno</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">Dostosowanie AE</string>
+    <string name="ae_settings_summary">Dostosuj wygląd i zachowanie AE</string>
+    <string name="theme_title">Motyw</string>
+    <string name="theme_default">Domyślny motyw ustawień</string>
+    <string name="ae_launcher_enabled_title">Pokaż ikonę launchera</string>
+    <string name="ae_launcher_enabled_summary">Pokaż ikonę dodatków  w liście aplikacji</string>
+    <string name="ae_launcher_enabled_update">Zaktualizowano widoczność ikon w launcherze. Wprowadzenie zmian może chwile potrwać</string>
     <!-- About -->
+    <string name="about_title">O</string>
+    <string name="about_summary">Wyświetlanie informacji o tym ROMie</string>
+    <string name="weblinks_category">Linki</string>
+    <string name="info_category">Informacje</string>
+    <string name="baikalos_website_title">Strona WWW</string>
+    <string name="baikalos_website_summary">Odwiedź witrynę </string>
+    <string name="g_plus_title">Społeczność G+</string>
+    <string name="g_plus_summary">Przejdź na stronę społeczności Google +</string>
+    <string name="baikalos_gerrit_summary">Odwiedź nasz gerrit, aby wiedzieć nad czym pracujemy</string>
+    <string name="baikalos_changelog_title">Dziennik zmian</string>
+    <string name="baikalos_changelog_summary">Zobacz najświeższe zmiany w </string>
+    <string name="baikalos_downloads_title">Pobrane</string>
+    <string name="baikalos_downloads_summary">Odwiedź stronę pobierania  dla Twojego urządzenia</string>
+    <string name="baikalos_ota_title">Centrum aktualizacji</string>
+    <string name="baikalos_ota_summary">Sprawdź aktualizacje</string>
+    <string name="stats_title">Statystyki</string>
+    <string name="stats_summary">Zezwalam na anonimowe zbieranie danych</string>
+    <string name="device_maintainer_title">Opiekun urządzenia</string>
+    <string name="device_maintainer_dialog">Opiekun urządzenia</string>
+    <string name="device_maintainers_dialog">Opiekunowie urządzenia</string>
     <!-- Other / general purpose -->
+    <string name="on">Wł</string>
+    <string name="off">Wył</string>
+    <string name="systemui_restart_title">Wymagany restart SystemUI</string>
+    <string name="systemui_restart_message">Aby wszystkie zmiany zostały wprowadzone wymagany jest restart SystemUI. Zrestartować SystemUI teraz?</string>
+    <string name="cannot_get_su">Akcja nie powiodła się z powodu braku ROOTa</string>
+    <string name="launcher_shortcut_disabled_message">Skrót wyłączony</string>
+    <string name="hidden_anim_activity_title">Czas na yoge!!</string>
+    <string name="hidden_anim_more_nice">NICE</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
     <!-- Lockscreen Weather -->
@@ -108,13 +164,22 @@
     <!-- Navigation-->
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">Zestawy ikon</string>
+    <string name="picker_activities">Aktywności</string>
+    <string name="select_custom_app_title">Wybierz własną aplikację</string>
+    <string name="select_custom_activity_title">Wybierz niestandardową aktywność</string>
+    <string name="profile_applist_title">Aplikacje</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">Wybierz akcję</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">Własna etykieta sieci</string>
+    <string name="custom_carrier_label_explain">Wprowadź nową etykietę. Pozostaw puste, aby powrócić do domyślnej.</string>
+    <string name="custom_carrier_label_notset">Własna etykieta nie jest obecnie ustawiona</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -132,6 +197,7 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_off">Wył</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
