--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -19,8 +19,13 @@
 -->
 <resources>
     <!-- Dashboard -->
+    <string name="user_interface_category">Interface do utilizador</string>
+    <string name="system_category">Sistema</string>
+    <string name="other_category">Outro</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">Barra de status</string>
+    <string name="status_bar_summary">Editar aparência da barra de status</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,12 +36,24 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_dismissable">sem notificações desabilitadas</string>
+    <string name="smart_pulldown_ongoing">nenhuma notificação em curso</string>
+    <string name="smart_pulldown_summary">Abra configurações rápidas quando há %1$s</string>
+    <string name="smart_pulldown_none_summary">Abra configurações rápidas quando não há notificações</string>
+    <string name="smart_pulldown_off_summary">está desligado</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">O formato de relógio 24 horas está ativado</string>
+    <string name="clock_date_string_edittext_title">Deve estar em formato de data, por exemplo: MM/dd/yy</string>
+    <string name="clock_date_string_edittext_summary">Digite a sequência de caracteres</string>
+    <string name="menu_cancel">Cancelar</string>
+    <string name="menu_save">Salvar</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">Notificações</string>
+    <string name="notifications_summary">Controle de notificações extendido</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +61,8 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">Configurações rápidas</string>
+    <string name="quick_settings_summary">Editar a aparência das configurações rápidas</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +73,17 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="custom_header_browse_title">Ver os cabeçalhos instalados</string>
+    <string name="custom_header_browse_summary_new">Navegue em todas as coleções de cabeçalho disponíveis</string>
+    <string name="custom_header_pick_title">Selecione a imagem do cabeçalho</string>
+    <string name="custom_header_pick_summary">Selecione uma imagem para usar no modo estático</string>
+    <string name="header_provider_disabled">Desativado</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">Recentes</string>
+    <string name="recents_summary">Editar aparência da tela de apps recentes</string>
+    <string name="stock_recents_category">Ações recentes</string>
+    <string name="alternative_recents_category">Como alternativa aos \"Recentes\"</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -65,6 +93,8 @@
     <!-- Slim recents membar -->
     <!-- OmniSwitch -->
     <!-- Lockscreen -->
+    <string name="lockscreen_title">Tela de bloqueio</string>
+    <string name="lockscreen_summary">Editar aparência da tela de bloqueio</string>
     <!-- Double tap to sleep on lockscreen -->
     <!-- Media art -->
     <!-- Lockscreen battery info indicator  -->
@@ -78,6 +108,8 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">Outros ajustes da interface de usuário</string>
+    <string name="other_ui_summary">Utilitários variados</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,28 +125,130 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">Visor e animações</string>
+    <string name="system_animations_summary">Animações do sistema</string>
+    <string name="custom_bootanimation_title">Animação de inicialização</string>
+    <string name="custom_bootanimation_summary">Selecionar animação de inicialização personalizada. Em cada troca, a animação atual será copiada para a pasta BaikalOS_backup no seu armazenamento interno. Animações antigas deverão ser excluídas manualmente se não forem mais necessárias.</string>
+    <string name="bootanimation_preview">Visualizar animação de inicialização</string>
+    <string name="bootanimation_set_custom">Definindo personalização...</string>
+    <string name="bootanimation_creating_preview">Criando visualização...</string>
+    <string name="bootanimation_error_reading_zip_file">Erro ao ler o arquivo</string>
+    <string name="bootanimation_error_creating_preview">Erro ao criar a pré-visualização</string>
+    <string name="bootanimation_install_file_manager_error">Nenhum aplicativo encontrado para selecionar o arquivo zip. Por favor, instale um gerenciador de arquivos.</string>
+    <string name="bootanimation_apply">Aplicar</string>
+    <string name="bootanimation_install_successful">Configuração aplicada com sucesso.</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">Comportamento do sistema</string>
+    <string name="system_behaviour_summary">Ajustes do sistema</string>
+    <string name="selinux_explanation_summary">SELinux é um conjunto de modificações do kernel e ferramentas de espaço de usuário. Alterando modos pode causar efeitos indesejados. Use a seu próprio risco.</string>
+    <string name="selinux_mode_title">Modo do SElinux</string>
+    <string name="selinux_permissive_summary">Permissivo</string>
+    <string name="selinux_enforcing_summary">Restrito</string>
+    <string name="selinux_persistence_title">Persistir entre reinicializações</string>
+    <string name="selinux_persistence_summary">Restaurar o modo sepolicy a cada inicialização</string>
+    <string name="selinux_permissive_toast_title">SELinux definido como permissivo!</string>
+    <string name="selinux_enforcing_toast_title">Selinux configurado para aplicar!</string>
     <!-- Log it -->
+    <string name="log_it_title">Registrar essa merda!</string>
+    <string name="log_it_now_title">Envolver-se</string>
+    <string name="log_it_dialog_title">Envolver-se</string>
+    <string name="logcat_warning">Compartilhá-lo, ou vá embora!</string>
+    <string name="share_title">A partilhar...</string>
+    <string name="log_it_share_subject">Logs de BaikalOS</string>
+    <string name="log_it_now_summary">Seja paciente para que os logs sejam criados</string>
+    <string name="log_it_logs_in_progress">Os logs estão sendo criados …</string>
+    <string name="log_it_share_type_title">Método de compartilhamento</string>
+    <string name="log_it_share_type_zip">Arquivos ZIP</string>
+    <string name="log_it_share_type_haste">Carregar para BaikalOS Haste</string>
+    <string name="log_it_share_via">Compartilhar via</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">Pornô de painel</string>
+    <string name="panel_porn_summary">Mundo Davor!</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">Personalização de AE</string>
+    <string name="ae_settings_summary">Personalizar a aparência e o comportamento do BaikalOS Extras</string>
+    <string name="theme_title">Tema</string>
+    <string name="theme_default">Tema de configurações padrão</string>
+    <string name="theme_default_more_accent">Mais cores</string>
+    <string name="theme_light">Claro</string>
+    <string name="theme_light_more_accent">Claro com mais cor</string>
+    <string name="theme_dark">Escuro</string>
+    <string name="theme_dark_more_accent">Escuro com mais cor</string>
+    <string name="ae_launcher_enabled_title">Mostrar ícone do launcher</string>
+    <string name="ae_launcher_enabled_summary">Mostrar BaikalOS Extras no launcher</string>
+    <string name="ae_launcher_enabled_update">Visibilidade de ícone do launcher atualizada. Pode levar algum tempo para que a alteração tenha efeito</string>
     <!-- About -->
+    <string name="about_title">Acerca</string>
+    <string name="about_summary">Exibir informações sobre esta ROM</string>
+    <string name="weblinks_category">Links da web</string>
+    <string name="info_category">Informações</string>
+    <string name="baikalos_website_title">Site</string>
+    <string name="baikalos_website_summary">Visite o site do BaikalOS</string>
+    <string name="g_plus_title">G + Comunidade</string>
+    <string name="g_plus_summary">Participe da nossa comunidade do Google +</string>
+    <string name="baikalos_gerrit_summary">Visite o nosso Gerrit para saber no que estamos trabalhando</string>
+    <string name="baikalos_changelog_title">Mudanças</string>
+    <string name="baikalos_changelog_summary">Exibir alterações recentes feitas no BaikalOS</string>
+    <string name="baikalos_downloads_title">Transferências</string>
+    <string name="baikalos_downloads_summary">Visite a página de download BaikalOS para o seu dispositivo</string>
+    <string name="baikalos_ota_title">Centro de Atualização</string>
+    <string name="baikalos_ota_summary">Verificar se há atualizações</string>
+    <string name="stats_title">Estatísticas</string>
+    <string name="stats_summary">Opt in/out para estatísticas anônimas</string>
+    <string name="device_maintainer_title">Mantenedor do dispositivo</string>
+    <string name="device_maintainer_dialog">Mantenedor do dispositivo</string>
+    <string name="device_maintainers_dialog">Mantenedores do dispositivo</string>
+    <string name="device_maintainer_default">Desconhecido</string>
+    <string name="no_root_title">Não enraizadas</string>
     <!-- Other / general purpose -->
+    <string name="on">Ligado</string>
+    <string name="off">Desligado</string>
+    <string name="reset">Reiniciar</string>
+    <string name="systemui_restart_title">É necessário reiniciar o Sistema de Interface do Usuário</string>
+    <string name="systemui_restart_message">Para que todas as alterações sejam efetivadas, uma reinicialização do Sistema de Interface do Usuário é necessária. Reiniciar o Sistema de Interface agora?</string>
+    <string name="cannot_get_su">Ação falhou devido a falta de acesso de superusuário</string>
+    <string name="launcher_shortcut_disabled_message">Atalho desabilitado</string>
+    <string name="hidden_anim_activity_title">tempo de Yoga !!!</string>
+    <string name="hidden_anim_more_nice">NICE</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
+    <string name="weather_title">Clima</string>
+    <string name="weather_config_title">Configurações do serviço</string>
     <!-- Lockscreen Weather -->
     <!-- Statusbar ticker -->
     <!-- Navigation-->
+    <string name="navigation_summary">Estoque/Smartbar/aventura/gestos</string>
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">Pacotes de ícones</string>
+    <string name="picker_activities">Atividades</string>
+    <string name="select_custom_app_title">Escolha um aplicativo personalizado</string>
+    <string name="select_custom_activity_title">Selecione a atividade personalizada</string>
+    <string name="profile_applist_title">Aplicações</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">Escolher ação</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
+    <string name="smartbar_factory_reset_title">Redefinir para padrão</string>
+    <string name="smartbar_factory_reset_confirm">Tem certeza de que deseja redefinir a SmartBar para configurações padrão?</string>
+    <string name="smartbar_backup_current_config_title">Salvar Perfil</string>
+    <string name="smartbar_restore_config_title">Restaurar o perfil</string>
+    <string name="smartbar_config_name_edit_dialog_title">Nome de perfil da Smartbar</string>
+    <string name="smartbar_config_name_edit_dialog_message">Digite um nome ou deixe em branco</string>
+    <string name="smartbar_config_dialog_title">Perfis da SmartBar</string>
+    <string name="smartbar_config_backup_success_toast">Perfil da SmartBar salvo com sucesso</string>
+    <string name="smartbar_config_restore_success_toast">Perfil da SmartBar restaurado com sucesso</string>
+    <string name="smartbar_config_backup_error_toast">Erro ao salvar o perfil da Smartbar</string>
+    <string name="smartbar_config_restore_error_toast">Erro ao restaurar o perfil da SmartBar</string>
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">Etiqueta de suporte personalizada</string>
+    <string name="custom_carrier_label_explain">Por favor, indique um novo rótulo. Deixe em branco para reverter a etiqueta de estoque.</string>
+    <string name="custom_carrier_label_notset">Etiqueta personalizada atualmente não definida</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -125,6 +259,7 @@
     <!-- Dynamic Navbar -->
     <!-- Face unlock toggle -->
     <!-- Navigation -->
+    <string name="navigation_category">Navegação</string>
     <!-- HW keys -->
     <!-- Volume keys -->
     <!-- Hardware button navigation -->
@@ -132,6 +267,9 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_summary_left">Canto esquerdo da barra de status faz descer o painel de configurações rápidas</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">Canto direito da barra de status faz descer o painel de configurações rápidas</string>
+    <string name="status_bar_quick_qs_pulldown_off">Desligado</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
