--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -19,8 +19,11 @@
 -->
 <resources>
     <!-- Dashboard -->
+    <string name="user_interface_category">Giao diện người dùng</string>
+    <string name="other_category">Khác</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">Thanh trạng thái</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -33,10 +36,12 @@
     <!-- Smart pulldown-->
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="menu_cancel">Hủy</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">Thông báo</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +49,7 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">Cài đặt nhanh</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +60,10 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="header_provider_disabled">Đã vô hiệu hóa</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">Ứng dụng gần đây</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -93,14 +101,35 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">Hoạt ảnh</string>
     <!-- System behaviour -->
     <!-- Log it -->
+    <string name="log_it_now_title">Tham gia</string>
+    <string name="log_it_dialog_title">Tham gia</string>
+    <string name="logcat_warning">Chia sẻ nó hoặc GTFO!</string>
+    <string name="share_title">Chia sẻ...</string>
+    <string name="log_it_share_subject">Bản ghi BaikalOS</string>
+    <string name="log_it_now_summary">Kiên nhẫn trong khi các bản ghi được tạo ra</string>
+    <string name="log_it_logs_in_progress">Các bản ghi đang được tạo …</string>
+    <string name="log_it_share_type_title">Phương pháp chia sẻ</string>
+    <string name="log_it_share_type_zip">File ZIP</string>
+    <string name="log_it_share_type_haste">Tải lên BaikalOS Haste</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">Bảng điều khiển</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
     <!-- About -->
+    <string name="about_title">Thông tin</string>
+    <string name="g_plus_title">Cộng đồng G+</string>
+    <string name="baikalos_changelog_title">Nhật ký thay đổi</string>
+    <string name="baikalos_downloads_title">Tải xuống</string>
+    <string name="baikalos_ota_summary">Kiểm tra các cập nhật mới</string>
     <!-- Other / general purpose -->
+    <string name="on">Bật</string>
+    <string name="off">Tắt</string>
+    <string name="hidden_anim_activity_title">Thời gian cho Yoga!!!</string>
+    <string name="hidden_anim_more_nice">TỐT</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
     <!-- Lockscreen Weather -->
@@ -108,6 +137,10 @@
     <!-- Navigation-->
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="picker_activities">Kích hoạt</string>
+    <string name="select_custom_app_title">Chọn ứng dụng tùy chỉnh</string>
+    <string name="select_custom_activity_title">Chọn hoạt động tùy chỉnh</string>
+    <string name="profile_applist_title">Ứng dụng</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
@@ -115,6 +148,9 @@
     <!-- Navbar height -->
     <!-- SmartBar -->
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">Tùy chỉnh tên nhà mạng</string>
+    <string name="custom_carrier_label_explain">Vui lòng nhập một nhãn mới. Để trống để trở lại nhãn gốc.</string>
+    <string name="custom_carrier_label_notset">Tên tùy chỉnh hiện chưa được thiết lập</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -132,6 +168,7 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_off">Tắt</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
