--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -18,9 +18,15 @@
  */
 -->
 <resources>
+    <string name="app_name">BaikalOS 額外功能</string>
     <!-- Dashboard -->
+    <string name="user_interface_category">使用者介面</string>
+    <string name="system_category">系統</string>
+    <string name="other_category">其他</string>
     <!-- Device parts -->
     <!-- Status bar -->
+    <string name="status_bar_title">狀態列</string>
+    <string name="status_bar_summary">編輯狀態列外觀</string>
     <!-- StatusBar Battery Options -->
     <!-- Bluetooth status -->
     <!-- Statusbar net monitor -->
@@ -31,12 +37,24 @@
     <!-- Battery bar -->
     <!-- StatusBar weather settings -->
     <!-- Smart pulldown-->
+    <string name="smart_pulldown_dismissable">沒有通知</string>
+    <string name="smart_pulldown_ongoing">沒有正在進行的通知</string>
+    <string name="smart_pulldown_summary">%1$s 時開啟快速設定</string>
+    <string name="smart_pulldown_none_summary">開啟快速設定時沒有通知</string>
+    <string name="smart_pulldown_off_summary">已關閉</string>
     <!-- Double tap to sleep on status bar -->
     <!-- Statusbar Clock options -->
+    <string name="status_bar_am_pm_info">24 小時時鐘已啟用</string>
+    <string name="clock_date_string_edittext_title">日期格式必須是此形式 例如：MM/dd/yy</string>
+    <string name="clock_date_string_edittext_summary">輸入字串</string>
+    <string name="menu_cancel">取消</string>
+    <string name="menu_save">儲存</string>
     <!-- Statusbar BaikalOS logo -->
     <!-- Statusbar categories -->
     <!-- Show 4G instead of LTE -->
     <!-- Notifications -->
+    <string name="notifications_title">通知</string>
+    <string name="notifications_summary">延伸型通知控制</string>
     <!-- Heads up -->
     <!-- Notification guts kill app button -->
     <!-- InCall notifications vibrate -->
@@ -44,6 +62,8 @@
     <!-- Battery Styles -->
     <!-- Notification count -->
     <!-- Quick settings -->
+    <string name="quick_settings_title">快速設定</string>
+    <string name="quick_settings_summary">編輯快速設定外觀</string>
     <!-- Disable music track title in QS tile -->
     <!-- Small quick settings scroller -->
     <!-- QS rows and columns -->
@@ -54,8 +74,17 @@
     <!-- QS tiles title visibility -->
     <!-- QS carrier text visibility -->
     <!-- QS Headers -->
+    <string name="custom_header_browse_title">瀏覽已安裝的標頭</string>
+    <string name="custom_header_browse_summary_new">瀏覽所有可用的標頭集合</string>
+    <string name="custom_header_pick_title">選擇標頭圖片</string>
+    <string name="custom_header_pick_summary">選擇要用於靜態模式的圖片</string>
+    <string name="header_provider_disabled">已停用</string>
     <!-- Tiles animation style  -->
     <!-- Recents -->
+    <string name="recents_title">最近使用的應用程式</string>
+    <string name="recents_summary">編輯總覽應用程式螢幕外觀</string>
+    <string name="stock_recents_category">原始總覽</string>
+    <string name="alternative_recents_category">替代總覽</string>
     <!-- Recents panel settings -->
     <!-- Recents Membar -->
     <!-- Stock recents icon pack -->
@@ -65,6 +94,8 @@
     <!-- Slim recents membar -->
     <!-- OmniSwitch -->
     <!-- Lockscreen -->
+    <string name="lockscreen_title">鎖定畫面</string>
+    <string name="lockscreen_summary">編輯鎖定畫面的外觀</string>
     <!-- Double tap to sleep on lockscreen -->
     <!-- Media art -->
     <!-- Lockscreen battery info indicator  -->
@@ -78,6 +109,8 @@
     <!-- Hide statusbar on lockscreen -->
     <!-- Other UI tweaks -->
     <!-- Smartlock Auto Unlock -->
+    <string name="other_ui_title">其他 UI 調整</string>
+    <string name="other_ui_summary">各種其他項目</string>
     <!-- Volume dialog timeout -->
     <!-- Screenshot sound -->
     <!-- Swap volume keys based on device rotation -->
@@ -93,28 +126,133 @@
     <!-- Turn on display when power connected; turn off display when power disconnected -->
     <!-- Power Button - Long press for torch -->
     <!-- System animations -->
+    <string name="system_animations_title">動畫</string>
+    <string name="system_animations_summary">系統動畫</string>
+    <string name="custom_bootanimation_title">開機動畫</string>
+    <string name="custom_bootanimation_summary">請選擇自訂開機動畫。 每次更改目前動畫將被備份到內部儲存空間具有日期的 BaikalOS_backup 資料夾中。 如果沒有必要，請刪除它。</string>
+    <string name="bootanimation_preview">開機動畫預覽</string>
+    <string name="bootanimation_set_custom">設定自訂...</string>
+    <string name="bootanimation_creating_preview">正在建立預覽...</string>
+    <string name="bootanimation_error_reading_zip_file">讀取 ZIP 檔案錯誤</string>
+    <string name="bootanimation_error_creating_preview">建立預覽錯誤</string>
+    <string name="bootanimation_install_file_manager_error">沒有用來選擇所需壓縮檔案的應用程式。請安裝一個檔案管理員。</string>
+    <string name="bootanimation_apply">套用</string>
+    <string name="bootanimation_install_successful">已成功套用新開機動畫。</string>
     <!-- System behaviour -->
+    <string name="system_behaviour_title">系統行為</string>
+    <string name="system_behaviour_summary">系統微調</string>
+    <string name="selinux_explanation_summary">SELinux 是修改內核和使用者空間的工具。更改模式會導致不必要的影響。使用時自擔風險</string>
+    <string name="selinux_mode_title">Selinux 模式</string>
+    <string name="selinux_permissive_summary">許可</string>
+    <string name="selinux_enforcing_summary">強制執行</string>
+    <string name="selinux_persistence_title">堅持重新啟動</string>
+    <string name="selinux_persistence_summary">在每次啟動時恢復上述設定的策略模式</string>
+    <string name="selinux_permissive_toast_title">Selinux 設定為允許！</string>
+    <string name="selinux_enforcing_toast_title">Selinux 設定執行！</string>
     <!-- Log it -->
+    <string name="log_it_title">記錄起來！</string>
+    <string name="logcat_radio_title">無線電日誌</string>
+    <string name="log_it_now_title">執行</string>
+    <string name="log_it_dialog_title">執行</string>
+    <string name="logcat_warning">分享或是離開</string>
+    <string name="share_title">分享...</string>
+    <string name="log_it_share_subject">BaikalOS 日誌</string>
+    <string name="log_it_now_summary">耐心等待創建日誌</string>
+    <string name="log_it_logs_in_progress">正在創建日誌並…</string>
+    <string name="log_it_share_type_title">分享方法</string>
+    <string name="log_it_share_type_zip">ZIP 檔</string>
+    <string name="log_it_share_type_haste">上傳到 BaikalOS Haste</string>
+    <string name="log_it_share_via">分享透過</string>
     <!-- Panel porn -->
+    <string name="panel_porn_title">面板顏色</string>
+    <string name="panel_porn_summary">達沃爾世界！</string>
     <!-- Volume dialog opacity -->
     <!-- Power menu and dialogs opacity -->
     <!-- AE settings -->
+    <string name="ae_settings_title">AE 自訂</string>
+    <string name="ae_settings_summary">自訂 BaikalOS 額外的外觀和行為</string>
+    <string name="theme_title">主題</string>
+    <string name="theme_default">預設設定主題</string>
+    <string name="theme_default_more_accent">更多顏色</string>
+    <string name="theme_light">淺色</string>
+    <string name="theme_light_more_accent">更多淺色的顏色</string>
+    <string name="theme_dark">暗色</string>
+    <string name="theme_dark_more_accent">更多深色的顏色</string>
+    <string name="ae_launcher_enabled_title">顯示啟動器圖示</string>
+    <string name="ae_launcher_enabled_summary">在啟動器中顯示 BaikalOS 附加功能</string>
+    <string name="ae_launcher_enabled_update">啟動器圖示可見性已更新。更改生效可能需要一些時間</string>
     <!-- About -->
+    <string name="about_title">關於</string>
+    <string name="about_summary">檢視有關此 ROM 的資訊</string>
+    <string name="weblinks_category">網站連結</string>
+    <string name="info_category">資訊</string>
+    <string name="baikalos_website_title">網站</string>
+    <string name="baikalos_website_summary">瀏覽 BaikalOS 網站</string>
+    <string name="g_plus_title">G + 社群</string>
+    <string name="g_plus_summary">瀏覽我們的 Google+ 社群</string>
+    <string name="baikalos_gerrit_summary">瀏覽我們的 gerrit 知道我們在做什麼</string>
+    <string name="baikalos_changelog_title">更新日誌</string>
+    <string name="baikalos_changelog_summary">檢視最近對 BaikalOS 所做的更改</string>
+    <string name="baikalos_downloads_title">下載</string>
+    <string name="baikalos_downloads_summary">瀏覽您的裝置的 BaikalOS 下載頁面</string>
+    <string name="baikalos_ota_title">更新中心</string>
+    <string name="baikalos_ota_summary">檢查 BaikalOS 更新</string>
+    <string name="stats_title">統計</string>
+    <string name="stats_summary">選擇/退出匿名統計</string>
+    <string name="device_maintainer_title">裝置維護者</string>
+    <string name="device_maintainer_dialog">裝置維護者</string>
+    <string name="device_maintainers_dialog">裝置維護者</string>
+    <string name="device_maintainer_default">未知</string>
+    <string name="no_root_title">尚未 root</string>
+    <string name="no_root_summary">更多有關功能, 請 root 您的裝置</string>
     <!-- Other / general purpose -->
+    <string name="on">開啟</string>
+    <string name="off">關閉</string>
+    <string name="reset">重設</string>
+    <string name="systemui_restart_title">請求重新啟動使用者介面</string>
+    <string name="systemui_restart_message">要使所有更改生效，需要重新啟動使用者介面。 現在重新啟動使用者介面？</string>
+    <string name="cannot_get_su">由於缺少超級使用者權限, 動作失敗</string>
+    <string name="launcher_shortcut_disabled_message">捷徑已停用</string>
+    <string name="hidden_anim_activity_title">休息時間！！！</string>
+    <string name="hidden_anim_more_nice">很好</string>
     <!-- Sensor block per-package -->
     <!-- Weather - OmniJaws Settings -->
+    <string name="weather_title">天氣</string>
+    <string name="weather_config_title">服務設定</string>
     <!-- Lockscreen Weather -->
     <!-- Statusbar ticker -->
     <!-- Navigation-->
+    <string name="navigation_title">導覽</string>
+    <string name="navigation_summary">原始/智慧列/滑動手勢/手勢</string>
     <!-- Navigation bar -->
     <!-- DUI -->
+    <string name="icon_pack_picker_dialog_title">圖示包</string>
+    <string name="picker_activities">活動</string>
+    <string name="select_custom_app_title">選擇自訂應用程式</string>
+    <string name="select_custom_activity_title">選擇自訂活動</string>
+    <string name="profile_applist_title">應用程式</string>
     <!-- Actions dialog and default task values set in ActionPreference xml-->
+    <string name="choose_action_title">選擇動作</string>
     <!-- Fling -->
     <!-- Pulse navigation bar music visualizer -->
     <!-- Pulse config -->
     <!-- Navbar height -->
     <!-- SmartBar -->
+    <string name="smartbar_factory_reset_title">重設為預設</string>
+    <string name="smartbar_factory_reset_confirm">確定將智慧列重設為預設？</string>
+    <string name="smartbar_backup_current_config_title">儲存設定檔</string>
+    <string name="smartbar_restore_config_title">還原設定檔</string>
+    <string name="smartbar_config_name_edit_dialog_title">「智慧列」設定檔名稱</string>
+    <string name="smartbar_config_name_edit_dialog_message">輸入名稱或留白</string>
+    <string name="smartbar_config_dialog_title">「智慧列」設定檔</string>
+    <string name="smartbar_config_backup_success_toast">「智慧列」設定檔儲存成功</string>
+    <string name="smartbar_config_restore_success_toast">「智慧列」設定檔還原成功</string>
+    <string name="smartbar_config_backup_error_toast">儲存「智慧列」設定檔時發生錯誤</string>
+    <string name="smartbar_config_restore_error_toast">還原「智慧列」設定檔時發生錯誤</string>
     <!-- Carrier Label -->
+    <string name="custom_carrier_label_title">自訂電信業者名稱</string>
+    <string name="custom_carrier_label_explain">請輸入新的電信業者名稱，留空為恢復預設名稱。</string>
+    <string name="custom_carrier_label_notset">目前沒有設定電信業者名稱</string>
     <!-- AOKP custom system animations -->
     <!-- Lock screen visualizer -->
     <!-- Screen state service -->
@@ -125,6 +263,7 @@
     <!-- Dynamic Navbar -->
     <!-- Face unlock toggle -->
     <!-- Navigation -->
+    <string name="navigation_category">導覽</string>
     <!-- HW keys -->
     <!-- Volume keys -->
     <!-- Hardware button navigation -->
@@ -132,6 +271,9 @@
     <!-- Volume rocker wake -->
     <!-- Button brightness -->
     <!-- Quick QS pull down -->
+    <string name="status_bar_quick_qs_pulldown_summary_left">狀態列的左邊緣拉下快速設定</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">在狀態列的右側下拉時直接進入快速設定</string>
+    <string name="status_bar_quick_qs_pulldown_off">關閉</string>
     <!-- Status bar system icons -->
     <!-- Toast Animation -->
     <!-- System default animation -->
@@ -145,6 +287,7 @@
     <!-- Hostname setting -->
     <!-- Gestures -->
     <!-- Carbon gestures -->
+    <string name="carbon_gesture_launch">啟動</string>
     <!-- Disable FC notifications -->
     <!-- Circle app bar -->
     <!--OmniGesture-->
